formatted code and removed unnecessary
Signed-off-by: Artem Nefedov <artemnefedov@duck.com>